Refactor: Define MyRandomForestRegressor class

--- a/mle2e/ML_E2E.ipynb
+++ b/mle2e/ML_E2E.ipynb
@@ -1937,6 +1937,286 @@
     "\n",
     "### 전체 프로세스에 고르게 시간을 배분해야 합니다!"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## 3. Classify"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### import library"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "from sklearn.ensemble import RandomForestRegressor\n",
+    "from sklearn.metrics import mean_squared_error\n",
+    "from sklearn.model_selection import cross_val_score\n",
+    "from sklearn.model_selection import GridSearchCV\n",
+    "import joblib"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "extra_attribs = [\"rooms_per_hhold\", \"pop_per_hhold\", \"bedrooms_per_room\"]\n",
+    "cat_encoder = full_pipeline.named_transformers_[\"cat\"]\n",
+    "cat_one_hot_attribs = list(cat_encoder.categories_[0])"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### class: MyRandomForestRegressor"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "class MyRandomForestRegressor(RandomForestRegressor):\n",
+    "    def __init__(\n",
+    "            self,\n",
+    "            n_estimators=100,\n",
+    "            criterion=\"squared_error\",\n",
+    "            max_depth=None,\n",
+    "            min_samples_split=2,\n",
+    "            min_samples_leaf=1,\n",
+    "            min_weight_fraction_leaf=0.0,\n",
+    "            max_features=1.0,\n",
+    "            max_leaf_nodes=None,\n",
+    "            min_impurity_decrease=0.0,\n",
+    "            bootstrap=True,\n",
+    "            oob_score=False,\n",
+    "            n_jobs=None,\n",
+    "            random_state=None,\n",
+    "            verbose=0,\n",
+    "            warm_start=False,\n",
+    "            ccp_alpha=0.0,\n",
+    "            max_samples=None,\n",
+    "    ):\n",
+    "        super().__init__(\n",
+    "            n_estimators=n_estimators,\n",
+    "            criterion=criterion,\n",
+    "            max_depth=max_depth,\n",
+    "            min_samples_split=min_samples_split,\n",
+    "            min_samples_leaf=min_samples_leaf,\n",
+    "            min_weight_fraction_leaf=min_weight_fraction_leaf,\n",
+    "            max_features=max_features,\n",
+    "            max_leaf_nodes=max_leaf_nodes,\n",
+    "            min_impurity_decrease=min_impurity_decrease,\n",
+    "            bootstrap=bootstrap,\n",
+    "            oob_score=oob_score,\n",
+    "            n_jobs=n_jobs,\n",
+    "            random_state=random_state,\n",
+    "            verbose=verbose,\n",
+    "            warm_start=warm_start,\n",
+    "            ccp_alpha=ccp_alpha,\n",
+    "            max_samples=max_samples\n",
+    "        )\n",
+    "        self.grid_search_ = None\n",
+    "\n",
+    "    @staticmethod\n",
+    "    def root_mean_squared_error(predictions, labels):\n",
+    "        mse = mean_squared_error(predictions, labels)\n",
+    "        rmse = np.sqrt(mse)\n",
+    "        return rmse\n",
+    "\n",
+    "    def cross_val_score_with_rmse(self, prepared, labels):\n",
+    "        _scores = cross_val_score(self, prepared, labels,\n",
+    "                                  scoring=\"neg_mean_squared_error\",\n",
+    "                                  cv=num_cv,\n",
+    "                                  verbose=2)\n",
+    "        return np.sqrt(-_scores)\n",
+    "\n",
+    "    def grid_search_cv(self):\n",
+    "        self.grid_search_ = GridSearchCV(self, param_grid, cv=num_cv,\n",
+    "                                         scoring='neg_mean_squared_error',\n",
+    "                                         return_train_score=True,\n",
+    "                                         verbose=2\n",
+    "                                         )\n",
+    "        self.grid_search_.fit(housing_prepared, housing_labels)\n",
+    "\n",
+    "    @property\n",
+    "    def importances(self):\n",
+    "        return self.grid_search_.best_estimator_.feature_importances_\n",
+    "\n",
+    "    @property\n",
+    "    def attributes(self):\n",
+    "\n",
+    "        return num_attribs + extra_attribs + cat_one_hot_attribs\n",
+    "\n",
+    "    def save_model(self, file_name: str = 'my_model.pkl'):\n",
+    "        joblib.dump(self, file_name)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Usage"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# Define and train model\n",
+    "regressor = MyRandomForestRegressor()\n",
+    "regressor.fit(housing_prepared, housing_labels)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# RMSE\n",
+    "housing_predictions = regressor.predict(housing_prepared)\n",
+    "error = regressor.root_mean_squared_error(housing_predictions, housing_labels)\n",
+    "print(error)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# cross validation score\n",
+    "num_cv = 3\n",
+    "regressor.cross_val_score_with_rmse(housing_prepared, housing_labels)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "param_grid = [\n",
+    "    {'n_estimators': [3, 10, 30], 'max_features': [2, 4, 6, 8]},\n",
+    "    {'bootstrap': [False], 'n_estimators': [3, 10], 'max_features': [2, 3, 4]},\n",
+    "]"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# grid search\n",
+    "regressor.grid_search_cv()\n",
+    "cvres = regressor.grid_search_.cv_results_\n",
+    "for mean_score, params in zip(cvres[\"mean_test_score\"], cvres[\"params\"]):\n",
+    "    print(np.sqrt(-mean_score), params)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# feature importance\n",
+    "sorted(zip(regressor.importances, regressor.attributes), reverse=True)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "X_test = strat_test_set.drop(\"median_house_value\", axis=1)\n",
+    "y_test = strat_test_set[\"median_house_value\"].copy()\n",
+    "X_test_prepared = full_pipeline.transform(X_test)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# validate test dataset\n",
+    "my_final_predictions = regressor.predict(X_test_prepared)\n",
+    "regressor.root_mean_squared_error(y_test, my_final_predictions)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# save model\n",
+    "regressor.save_model()"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# load model\n",
+    "loaded_regressor = joblib.load('my_model.pkl')\n",
+    "loaded_regressor.predict(housing_prepared)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   }
  ],
  "metadata": {
