Refactor: Change function using module from model.py

--- a/mle2e/ML_E2E.ipynb
+++ b/mle2e/ML_E2E.ipynb
@@ -1595,7 +1595,7 @@
     "    print(\"Mean:\", scores.mean())\n",
     "    print(\"Standard deviation:\", scores.std())\n",
     "\n",
-    "display_scores(tree_rmse_scores)"
+    "# display_scores(tree_rmse_scores)"
    ]
   },
   {
@@ -1636,8 +1636,9 @@
    "outputs": [],
    "source": [
     "from sklearn.ensemble import RandomForestRegressor\n",
+    "import jongphago as jpg\n",
     "\n",
-    "forest_reg = RandomForestRegressor(n_estimators=100, random_state=42)\n",
+    "forest_reg = jpg.model.RandomForestRegressor(n_estimators=100, random_state=42)\n",
     "forest_reg.fit(housing_prepared, housing_labels)"
    ]
   },
@@ -1648,8 +1649,7 @@
    "outputs": [],
    "source": [
     "housing_predictions = forest_reg.predict(housing_prepared)\n",
-    "forest_mse = mean_squared_error(housing_labels, housing_predictions)\n",
-    "forest_rmse = np.sqrt(forest_mse)\n",
+    "forest_rmse = forest_reg.root_mean_squared_error(housing_labels, housing_predictions)\n",
     "forest_rmse"
    ]
   },
@@ -1659,11 +1659,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.model_selection import cross_val_score\n",
-    "\n",
-    "forest_scores = cross_val_score(forest_reg, housing_prepared, housing_labels,\n",
-    "                                scoring=\"neg_mean_squared_error\", cv=10)\n",
-    "forest_rmse_scores = np.sqrt(-forest_scores)\n",
+    "forest_rmse_scores = forest_reg.cross_val_score_with_rmse(housing_prepared, housing_labels,\n",
+    "                                scoring=\"neg_mean_squared_error\", cv=2)\n",
     "display_scores(forest_rmse_scores)"
    ]
   },
@@ -1686,7 +1683,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.model_selection import GridSearchCV\n",
+    "import jongphago as jpg\n",
     "\n",
     "param_grid = [\n",
     "    # try 12 (3×4) combinations of hyperparameters\n",
@@ -1695,12 +1692,13 @@
     "    {'bootstrap': [False], 'n_estimators': [3, 10], 'max_features': [2, 3, 4]},\n",
     "  ]\n",
     "\n",
-    "forest_reg = RandomForestRegressor(random_state=42)\n",
-    "# train across 5 folds, that's a total of (12+6)*5=90 rounds of training \n",
-    "grid_search = GridSearchCV(forest_reg, param_grid, cv=5,\n",
-    "                           scoring='neg_mean_squared_error',\n",
-    "                           return_train_score=True)\n",
-    "grid_search.fit(housing_prepared, housing_labels)"
+    "forest_reg = jpg.model.RandomForestRegressor(random_state=42)\n",
+    "# train across 5 folds, that's a total of (12+6)*5=90 rounds of training\n",
+    "forest_reg.grid_search_cv(param_grid, housing_prepared, housing_labels,\n",
+    "                                        cv=2,\n",
+    "                                        scoring='neg_mean_squared_error',\n",
+    "                                        return_train_score=True)\n",
+    "grid_search = forest_reg.grid_search_"
    ]
   },
   {
@@ -1755,7 +1753,7 @@
     "        'max_features': randint(low=1, high=8),\n",
     "    }\n",
     "\n",
-    "forest_reg = RandomForestRegressor(random_state=42)\n",
+    "forest_reg_ = RandomForestRegressor(random_state=42)\n",
     "rnd_search = RandomizedSearchCV(forest_reg, param_distributions=param_distribs,\n",
     "                                n_iter=10, cv=5, scoring='neg_mean_squared_error', random_state=42)\n",
     "rnd_search.fit(housing_prepared, housing_labels)"
@@ -1785,7 +1783,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "feature_importances = grid_search.best_estimator_.feature_importances_\n",
+    "feature_importances = forest_reg.importances\n",
     "feature_importances"
    ]
   },
@@ -1799,8 +1797,8 @@
     "#cat_encoder = cat_pipeline.named_steps[\"cat_encoder\"] # old solution\n",
     "cat_encoder = full_pipeline.named_transformers_[\"cat\"]\n",
     "cat_one_hot_attribs = list(cat_encoder.categories_[0])\n",
-    "attributes = num_attribs + extra_attribs + cat_one_hot_attribs\n",
-    "sorted(zip(feature_importances, attributes), reverse=True)"
+    "forest_reg.set_attributes(num_attribs, extra_attribs, cat_one_hot_attribs)\n",
+    "sorted(zip(feature_importances, forest_reg.attributes), reverse=True)"
    ]
   },
   {
@@ -1824,8 +1822,7 @@
     "X_test_prepared = full_pipeline.transform(X_test)\n",
     "final_predictions = final_model.predict(X_test_prepared)\n",
     "\n",
-    "final_mse = mean_squared_error(y_test, final_predictions)\n",
-    "final_rmse = np.sqrt(final_mse)"
+    "final_rmse = final_model.root_mean_squared_error(y_test, final_predictions)"
    ]
   },
   {
@@ -1881,7 +1878,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "my_model = full_pipeline_with_predictor"
+    "my_model = final_model"
    ]
   },
   {
@@ -1891,7 +1888,7 @@
    "outputs": [],
    "source": [
     "import joblib\n",
-    "joblib.dump(my_model, \"my_model.pkl\")\n",
+    "final_model.save_model(file_name='my_model.pkl')\n",
     "#...\n",
     "my_model_loaded = joblib.load(\"my_model.pkl\")"
    ]
@@ -1902,7 +1899,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "my_model_loaded.predict(some_data)"
+    "my_model_loaded.predict(housing_prepared)"
    ]
   },
   {
@@ -1937,221 +1934,6 @@
     "\n",
     "### 전체 프로세스에 고르게 시간을 배분해야 합니다!"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "## 3. Classify"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "### import library"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "from importlib import reload\n",
-    "import joblib  # load model\n",
-    "import jongphago as jpg"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "if jpg.sklearn.model:\n",
-    "    reload(jpg.sklearn.model)"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "### class: MyRandomForestRegressor"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "### Usage"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "# Define and train model\n",
-    "regressor = jpg.sklearn.model.RandomForestRegressor()\n",
-    "regressor.fit(housing_prepared, housing_labels)"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "# RMSE\n",
-    "housing_predictions = regressor.predict(housing_prepared)\n",
-    "error = regressor.root_mean_squared_error(housing_predictions, housing_labels)\n",
-    "print(error)"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "# cross validation score\n",
-    "regressor.cross_val_score_with_rmse(housing_prepared, housing_labels)"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "param_grid = [\n",
-    "    {'n_estimators': [3, 10, 30], 'max_features': [2, 4, 6, 8]},\n",
-    "    {'bootstrap': [False], 'n_estimators': [3, 10], 'max_features': [2, 3, 4]},\n",
-    "]"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "# grid search\n",
-    "regressor.grid_search_cv(param_grid, housing_prepared, housing_labels)\n",
-    "cvres = regressor.grid_search_.cv_results_\n",
-    "for mean_score, params in zip(cvres[\"mean_test_score\"], cvres[\"params\"]):\n",
-    "    print(np.sqrt(-mean_score), params)"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "extra_attribs = [\"rooms_per_hhold\", \"pop_per_hhold\", \"bedrooms_per_room\"]\n",
-    "cat_encoder = full_pipeline.named_transformers_[\"cat\"]\n",
-    "cat_one_hot_attribs = list(cat_encoder.categories_[0])"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "# feature importance\n",
-    "regressor.set_attributes(num_attribs, extra_attribs, cat_one_hot_attribs)\n",
-    "sorted(zip(regressor.importances, regressor.attributes), reverse=True)"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "X_test = strat_test_set.drop(\"median_house_value\", axis=1)\n",
-    "y_test = strat_test_set[\"median_house_value\"].copy()\n",
-    "X_test_prepared = full_pipeline.transform(X_test)"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "# validate test dataset\n",
-    "my_final_predictions = regressor.predict(X_test_prepared)\n",
-    "regressor.root_mean_squared_error(y_test, my_final_predictions)"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "# save model\n",
-    "regressor.save_model()"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "# load model\n",
-    "loaded_regressor = joblib.load('my_model.pkl')\n",
-    "loaded_regressor.predict(housing_prepared)"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
-   "metadata": {
-    "collapsed": false
-   }
   }
  ],
  "metadata": {
