Feature: Define BaseRegressor class

--- a/mle2e/tutorial/model.ipynb
+++ b/mle2e/tutorial/model.ipynb
@@ -1469,7 +1469,53 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "class MyRandomForestRegressor(RandomForestRegressor):\n",
+    "class BaseRegressor:\n",
+    "    def __init__(self):\n",
+    "        self.grid_search_ = None\n",
+    "\n",
+    "    @staticmethod\n",
+    "    def root_mean_squared_error(predictions, labels):\n",
+    "        mse = mean_squared_error(predictions, labels)\n",
+    "        rmse = np.sqrt(mse)\n",
+    "        return rmse\n",
+    "\n",
+    "    def cross_val_score_with_rmse(self, prepared, labels):\n",
+    "        _scores = cross_val_score(self, prepared, labels,\n",
+    "                                  scoring=\"neg_mean_squared_error\",\n",
+    "                                  cv=num_cv,\n",
+    "                                  verbose=2)\n",
+    "        return np.sqrt(-_scores)\n",
+    "\n",
+    "    def grid_search_cv(self):\n",
+    "        self.grid_search_ = GridSearchCV(self, param_grid, cv=num_cv,\n",
+    "                                         scoring='neg_mean_squared_error',\n",
+    "                                         return_train_score=True,\n",
+    "                                         verbose=2\n",
+    "                                         )\n",
+    "        self.grid_search_.fit(housing_prepared, housing_labels)\n",
+    "\n",
+    "    @property\n",
+    "    def importances(self):\n",
+    "        return self.grid_search_.best_estimator_.feature_importances_\n",
+    "\n",
+    "    @property\n",
+    "    def attributes(self):\n",
+    "\n",
+    "        return num_attribs + extra_attribs + cat_one_hot_attribs\n",
+    "\n",
+    "    def save_model(self, file_name: str = 'my_model.pkl'):\n",
+    "        joblib.dump(self, file_name)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "class MyRandomForestRegressor(RandomForestRegressor, BaseRegressor):\n",
     "    def __init__(\n",
     "            self,\n",
     "            n_estimators=100,\n",
@@ -1508,41 +1554,7 @@
     "            warm_start=warm_start,\n",
     "            ccp_alpha=ccp_alpha,\n",
     "            max_samples=max_samples\n",
-    "        )\n",
-    "        self.grid_search_ = None\n",
-    "\n",
-    "    @staticmethod\n",
-    "    def root_mean_squared_error(predictions, labels):\n",
-    "        mse = mean_squared_error(predictions, labels)\n",
-    "        rmse = np.sqrt(mse)\n",
-    "        return rmse\n",
-    "\n",
-    "    def cross_val_score_with_rmse(self, prepared, labels):\n",
-    "        _scores = cross_val_score(self, prepared, labels,\n",
-    "                                  scoring=\"neg_mean_squared_error\",\n",
-    "                                  cv=num_cv,\n",
-    "                                  verbose=2)\n",
-    "        return np.sqrt(-_scores)\n",
-    "\n",
-    "    def grid_search_cv(self):\n",
-    "        self.grid_search_ = GridSearchCV(self, param_grid, cv=num_cv,\n",
-    "                                         scoring='neg_mean_squared_error',\n",
-    "                                         return_train_score=True,\n",
-    "                                         verbose=2\n",
-    "                                         )\n",
-    "        self.grid_search_.fit(housing_prepared, housing_labels)\n",
-    "\n",
-    "    @property\n",
-    "    def importances(self):\n",
-    "        return self.grid_search_.best_estimator_.feature_importances_\n",
-    "\n",
-    "    @property\n",
-    "    def attributes(self):\n",
-    "\n",
-    "        return num_attribs + extra_attribs + cat_one_hot_attribs\n",
-    "\n",
-    "    def save_model(self, file_name: str = 'my_model.pkl'):\n",
-    "        joblib.dump(self, file_name)"
+    "        )"
    ],
    "metadata": {
     "collapsed": false
