Feature: Define optimize method

--- a/mle2e/tutorial/model.ipynb
+++ b/mle2e/tutorial/model.ipynb
@@ -1458,7 +1458,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "### class: MyRandomForestRegressor"
+    "### class: BaseRegressor"
    ],
    "metadata": {
     "collapsed": false
@@ -1472,6 +1472,7 @@
     "class BaseRegressor:\n",
     "    def __init__(self):\n",
     "        self.grid_search_ = None\n",
+    "        self.final_model = None\n",
     "\n",
     "    @staticmethod\n",
     "    def root_mean_squared_error(predictions, labels):\n",
@@ -1504,7 +1505,20 @@
     "        return num_attribs + extra_attribs + cat_one_hot_attribs\n",
     "\n",
     "    def save_model(self, file_name: str = 'my_model.pkl'):\n",
-    "        joblib.dump(self, file_name)"
+    "        joblib.dump(self, file_name)\n",
+    "\n",
+    "    def optimize(self):\n",
+    "        self.grid_search_cv()\n",
+    "        self.final_model = self.grid_search_.best_estimator_"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### class: MyRandomForestRegressor"
    ],
    "metadata": {
     "collapsed": false
@@ -1683,6 +1697,76 @@
    "source": [
     "# save model\n",
     "regressor.save_model()"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# load model\n",
+    "loaded_regressor = joblib.load('my_model.pkl')\n",
+    "loaded_regressor.predict(housing_prepared)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### optimizer method"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# cross validataion parameter\n",
+    "num_cv = 3\n",
+    "\n",
+    "# grid search parameters\n",
+    "param_grid = [\n",
+    "    {'n_estimators': [3, 10, 30], 'max_features': [2, 4, 6, 8]},\n",
+    "    {'bootstrap': [False], 'n_estimators': [3, 10], 'max_features': [2, 3, 4]},\n",
+    "]\n",
+    "\n",
+    "# Test dataset\n",
+    "X_test = strat_test_set.drop(\"median_house_value\", axis=1)\n",
+    "y_test = strat_test_set[\"median_house_value\"].copy()\n",
+    "X_test_prepared = full_pipeline.transform(X_test)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "regressor.optimize()\n",
+    "final_prediction = regressor.final_model.predict(X_test_prepared)\n",
+    "regressor.final_model.root_mean_squared_error(y_test, final_prediction)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# save model\n",
+    "regressor.final_model.save_model()"
    ],
    "metadata": {
     "collapsed": false
