--- a/mle2e/tutorial/model.ipynb
+++ b/mle2e/tutorial/model.ipynb
@@ -1487,7 +1487,7 @@
     "                                  verbose=2)\n",
     "        return np.sqrt(-_scores)\n",
     "\n",
-    "    def grid_search_cv(self):\n",
+    "    def grid_search_cv(self, param_grid, num_cv=2):\n",
     "        self.grid_search_ = GridSearchCV(self, param_grid, cv=num_cv,\n",
     "                                         scoring='neg_mean_squared_error',\n",
     "                                         return_train_score=True,\n",
@@ -1507,8 +1507,8 @@
     "    def save_model(self, file_name: str = 'my_model.pkl'):\n",
     "        joblib.dump(self, file_name)\n",
     "\n",
-    "    def optimize(self):\n",
-    "        self.grid_search_cv()\n",
+    "    def optimize(self, param_grid):\n",
+    "        self.grid_search_cv(param_grid=param_grid)\n",
     "        self.final_model = self.grid_search_.best_estimator_"
    ],
    "metadata": {
@@ -1643,7 +1643,7 @@
    "outputs": [],
    "source": [
     "# grid search\n",
-    "regressor.grid_search_cv()\n",
+    "regressor.grid_search_cv(param_grid)\n",
     "cvres = regressor.grid_search_.cv_results_\n",
     "for mean_score, params in zip(cvres[\"mean_test_score\"], cvres[\"params\"]):\n",
     "    print(np.sqrt(-mean_score), params)"
@@ -1752,7 +1752,7 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "regressor.optimize()\n",
+    "regressor.optimize(param_grid)\n",
     "final_prediction = regressor.final_model.predict(X_test_prepared)\n",
     "regressor.final_model.root_mean_squared_error(y_test, final_prediction)"
    ],
@@ -1781,6 +1781,112 @@
     "loaded_regressor = joblib.load('my_model.pkl')\n",
     "loaded_regressor.predict(housing_prepared)"
    ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### class: MyDecisionTreeRegressor"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "from sklearn.tree import DecisionTreeRegressor"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "class MyDecisionTreeRegressor(DecisionTreeRegressor, BaseRegressor):\n",
+    "    def __init__(\n",
+    "            self,\n",
+    "            criterion=\"squared_error\",\n",
+    "            splitter=\"best\",\n",
+    "            max_depth=None,\n",
+    "            min_samples_split=2,\n",
+    "            min_samples_leaf=1,\n",
+    "            min_weight_fraction_leaf=0.0,\n",
+    "            max_features=None,\n",
+    "            random_state=None,\n",
+    "            max_leaf_nodes=None,\n",
+    "            min_impurity_decrease=0.0,\n",
+    "            ccp_alpha=0.0,\n",
+    "    ):\n",
+    "        super().__init__(\n",
+    "            criterion=criterion,\n",
+    "            splitter=splitter,\n",
+    "            max_depth=max_depth,\n",
+    "            min_samples_split=min_samples_split,\n",
+    "            min_samples_leaf=min_samples_leaf,\n",
+    "            min_weight_fraction_leaf=min_weight_fraction_leaf,\n",
+    "            max_features=max_features,\n",
+    "            random_state=random_state,\n",
+    "            max_leaf_nodes=max_leaf_nodes,\n",
+    "            min_impurity_decrease=min_impurity_decrease,\n",
+    "            ccp_alpha=ccp_alpha\n",
+    "        )"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# grid search parameters\n",
+    "param_grid = [\n",
+    "    {'max_features': [2, 4, 6, 8]},\n",
+    "    {'max_depth': [3, 10], 'max_features': [2, 3, 4]},\n",
+    "]"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "linear_regressor = MyDecisionTreeRegressor()\n",
+    "linear_regressor.optimize(param_grid)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "final_prediction = linear_regressor.final_model.predict(X_test_prepared)\n",
+    "linear_regressor.final_model.root_mean_squared_error(y_test, final_prediction)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
    "metadata": {
     "collapsed": false
    }
