Feature: Define BaseRegressor class

--- a/mle2e/ML_E2E.ipynb
+++ b/mle2e/ML_E2E.ipynb
@@ -1835,6 +1835,23 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "forest_reg.optimize(param_grid=param_grid,\n",
+    "                    prepared=housing_prepared,\n",
+    "                    labels=housing_labels,\n",
+    "                    return_train_score=True,\n",
+    "                    scoring='neg_mean_squared_error'\n",
+    "                    )\n",
+    "forest_reg.final_model"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1878,7 +1895,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "my_model = final_model"
+    "my_model = forest_reg.final_model"
    ]
   },
   {
@@ -1888,7 +1905,7 @@
    "outputs": [],
    "source": [
     "import joblib\n",
-    "final_model.save_model(file_name='my_model.pkl')\n",
+    "my_model.save_model(file_name='my_model.pkl')\n",
     "#...\n",
     "my_model_loaded = joblib.load(\"my_model.pkl\")"
    ]
@@ -1934,6 +1951,15 @@
     "\n",
     "### 전체 프로세스에 고르게 시간을 배분해야 합니다!"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   }
   }
  ],
  "metadata": {
