Feature: Define MyDecisionTreeRegressor class

--- a/mle2e/ML_E2E.ipynb
+++ b/mle2e/ML_E2E.ipynb
@@ -1853,6 +1853,54 @@
   },
   {
    "cell_type": "markdown",
+   "source": [
+    "#### Optimizer linear_regressor"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# grid search parameters\n",
+    "param_grid = [\n",
+    "    {'max_features': [2, 4, 6, 8]},\n",
+    "    {'max_depth': [3, 10], 'max_features': [2, 3, 4]},\n",
+    "]"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "linear_regressor = jpg.model.MyDecisionTreeRegressor()\n",
+    "linear_regressor.optimize(param_grid, housing_prepared, housing_labels)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "final_prediction = linear_regressor.final_model.predict(X_test_prepared)\n",
+    "linear_regressor.final_model.root_mean_squared_error(y_test, final_prediction)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "### 론칭, 모니터링, 시스템 유지 보수\n",
